tests/baselines/reference/declarationEmitExpandoWithGenericConstraint.errors.txt
declarationEmitExpandoWithGenericConstraint.ts(14,7): error TS2339: Property 'zero' does not exist on type '(x: number, y: number) => Point'.


==== declarationEmitExpandoWithGenericConstraint.ts (1 errors) ====
    export interface Point {
        readonly x: number;
        readonly y: number;
    }
    
    export interface Rect<p extends Point> {
        readonly a: p;
        readonly b: p;
    }
    
    export const Point = (x: number, y: number): Point => ({ x, y });
    export const Rect = <p extends Point>(a: p, b: p): Rect<p> => ({ a, b });
    
    Point.zero = (): Point => Point(0, 0);
          ~~~~
!!! error TS2339: Property 'zero' does not exist on type '(x: number, y: number) => Point'.